--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(SPiC_Assignment_Repo)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(SPiC_Assignment_Repo main.cpp serialization/include/LocalFileReader.hpp serialization/include/FileReader.hpp serialization/include/FileParser.hpp serialization/include/CSVFileParser.hpp serialization/src/CSVFileParser.cpp serialization/src/LocalFileReader.cpp domain/src/SpaceBody.cpp domain/include/SpaceBody.hpp domain/src/Vector2.cpp domain/include/Vector2.hpp domain/include/Factory/SpaceBodyFactory.hpp domain/src/Factory/PlanetFactory.cpp domain/src/Planet.cpp domain/include/Planet.hpp domain/include/Factory/PlanetFactory.hpp domain/include/Factory/AsteroidFactory.hpp domain/include/Asteroid.hpp domain/src/Asteroid.cpp domain/src/Factory/AsteroidFactory.cpp)
+add_executable(SPiC_Assignment_Repo main.cpp serialization/include/LocalFileReader.hpp serialization/include/FileReader.hpp serialization/include/FileParser.hpp serialization/include/CSVFileParser.hpp serialization/src/CSVFileParser.cpp serialization/src/LocalFileReader.cpp domain/src/SpaceBody.cpp domain/include/SpaceBody.hpp domain/include/Vector2.hpp domain/include/Factory/SpaceBodyFactory.hpp domain/src/Factory/PlanetFactory.cpp domain/src/Planet.cpp domain/include/Planet.hpp domain/include/Factory/PlanetFactory.hpp domain/include/Factory/AsteroidFactory.hpp domain/include/Asteroid.hpp domain/src/Asteroid.cpp domain/src/Factory/AsteroidFactory.cpp)
 
 include(FetchContent)
 FetchContent_Declare(
